Thu Jun 06 15:32:01 2002  George Lebl <jirka@5z.com>

	* NEWS, configure.in: preparation for 2.4.0.0

Thu Jun 06 11:47:26 2002  George Lebl <jirka@5z.com>

	* configure.in, po/POTFILES.in, gui/greeter/themes/Makefile.am,
	  gui/greeter/themes/happygnome/*:  Add the happygnome theme,
	  so finally the theme browser makes sense since you can now
	  switch between two themes :)  If we're in freeze we can at least
	  add themes ...

Tue Jun 04 21:45:19 2002  George Lebl <jirka@5z.com>

	* Release 2.3.90.6

	* configure.in: raise version

	* daemon/gdm.c: properly update the first login bool so
	  that not all logins after a slave dies are first logins.

	* daemon/slave.c: SECURITY FIX! after the automatic login,
	  return from the gdm_slave_run so that the display can be
	  reinitted.  Else clients may be left around.  Fixes #84055

Mon Jun 03 11:43:25 2002  George Lebl <jirka@5z.com>

	* Release 2.3.90.5

Sun Jun 02 12:51:20 2002  George Lebl <jirka@5z.com>

	* config/locale.alias: rewrite.  Use the languages that we know for
	  starters, don't put any duplicates.  Don't put any encodings.
	  put a note on the top of file about how broken this is.  However
	  this should be less broken then it was so far.

	* gui/gdmlanguages.c: fix collating languages, when the current
	  locale is not among the languages, add it (it will be put into
	  others section as just the language code).  This way users can
	  always select the current system locale.

2002-06-02  Kjartan Maraas  <kmaraas@gnome.org>

	* config/locale.alias: Make Norwegian use ISO-8859-15.
	
Sat Jun 01 20:43:33 2002  George Lebl <jirka@5z.com>

	* gui/gdmlanguages.c: We had hebrew in reverse order, so when pango
	  reversed it again, it came out reversed

Sat Jun 01 20:31:54 2002  George Lebl <jirka@5z.com>

	* gui/gdmlanguages.[ch], gui/gdmlogin.c,
	  gui/greeter/greeter_action_language.c: surround each langauge
	  with <span lang="??_??">foo</span> markup so that display is done
	  hopefully correctly.
