@@ -1,3 +1,8 @@
+2002-06-07  jacob berkman  <jacob@ximian.com>
+
+	* gui/greeter/themes/happygnome/Makefile.am (EXTRA_DIST):
+	s/circles/happygnome/
+
 Thu Jun 06 15:32:01 2002  George Lebl <jirka@5z.com>
 
 	* NEWS, configure.in: preparation for 2.4.0.0
